# VeRange

./: Cargo.toml  README-rust-sdk.md  README.md  pom.xml  truffle-config.js
.github/workflows/: ci.yml
contracts/: BIC.sol  BPPP.sol  SafeMath.sol  Swiftrange.sol  Type1.sol  Type2.sol  Type2P.sol  Type3.sol  Type4.sol
contracts/artifacts/: Type1.json  Type1_metadata.json
crates/verange-core/: Cargo.toml
crates/verange-core/src/: arith.rs  commitment.rs  curve.rs  lib.rs  params.rs  scalar.rs  transcript.rs  vector.rs
crates/verange-core/tests/: commitment_tests.rs  transcript_tests.rs  vector_tests.rs
crates/verange-poly-commit/: Cargo.toml
crates/verange-poly-commit/src/: commit.rs  lib.rs  ntt.rs  polynomial.rs
crates/verange-poly-commit/tests/: polynomial_commit_tests.rs
crates/verange-proof/: Cargo.toml
crates/verange-proof/src/: lib.rs  type1.rs  type2.rs  type2p.rs  type3.rs  utils.rs  (+1 more)
crates/verange-sdk/: Cargo.toml
crates/verange-sdk/examples/: proof_metrics.rs  sdk_all_types.rs
crates/verange-sdk/src/: error.rs  lib.rs  metrics.rs  params.rs  prover.rs  verifier.rs
crates/verange-sdk/tests/: metrics_tests.rs  sdk_api_tests.rs  workspace_smoke.rs
docs/: security-notes.md
docs/plans/: 2026-02-09-verange-rust-sdk.md
examples/: type2p_basic.rs  type3_aggregated.rs  type4_batch_basic.rs
fixtures/: java_hash_vectors.json
migrations/: 3_deploy_all.js
scripts/: export_java_vectors.sh
test/: BICTest.js  BPPPTest.js  README.md  RangeTest.js  SwiftrangeTest.js  Type1Test.js  Type2PTest.js  Type2Test.js  Type3Test.js  Type4Test.js
(+49 files in other folders)
