[package]
name = "verange-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "verange_core"
path = "src/lib.rs"

[dependencies]
ark-bn254 = "0.4"
ark-ec = "0.4"
ark-ff = "0.4"
tiny-keccak = { version = "2", features = ["keccak"] }

[dev-dependencies]
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
